puzzle/css: Fix aside overflow on iPad Pro 12.9 Safari with certain languages

--- a/ui/puzzle/css/_side.scss
+++ b/ui/puzzle/css/_side.scss
@@ -97,6 +97,7 @@
     align-self: start;
     background: $c-bg-box;
     padding: 2vmin;
+    overflow: hidden;
 
     &__jump {
       @extend %flex-center-nowrap;
